--- a/src/components/introApp/introApp.css
+++ b/src/components/introApp/introApp.css
@@ -3,6 +3,17 @@
     flex-direction: column;
     align-items: center;
     width: 100vw;
+    animation: loadingIntro 2s linear 0s 1 forwards;
+}
+
+@keyframes loadingIntro {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
 }
 
 .scEyeCatcher {
