--- a/src/components/searchShowList/searchShowList.css
+++ b/src/components/searchShowList/searchShowList.css
@@ -6,3 +6,19 @@
     padding: 1rem;
     gap: 1rem;
 }
+
+.containerInfo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+}
+
+.movieInfos {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    padding: 1rem;
+}
