--- a/src/components/searchBar/searchBar.css
+++ b/src/components/searchBar/searchBar.css
@@ -34,3 +34,31 @@ input {
     background-repeat: no-repeat;
     background-position: right 10px center;
 }
+
+
+.genreButtons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: .5rem;
+    margin: 1rem;
+    border-radius: 1rem;
+}
+
+
+.genreButtons button {
+    font-family: Poppins;
+    font-weight: 300;
+    font-size: 1.2rem;
+    padding: .5rem 1rem;
+    border: none;
+    border-radius: 1rem;
+    background-color: #FBF8FF;
+    color: #A4A3A3;
+    cursor: pointer;
+}
+
+.genreButtons button:hover {
+    background-color: var(--color-red);
+    color: white
+}
