--- a/src/components/searchShowList/searchShowList.css
+++ b/src/components/searchShowList/searchShowList.css
@@ -2,7 +2,6 @@
     width: 100%;
     display: grid;
     grid-template-columns: 1fr 3fr;
-    /* Adaugă două coloane de 50px fiecare */
     align-items: center;
     justify-content: center;
     padding: 1rem;
@@ -10,19 +9,12 @@
 }
 
 .containerInfo {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: 4fr 0.5fr;
+    grid-template-rows: 2fr 1fr;
 
-}
 
-.movieInfos {
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-    gap: 1rem;
-
+    justify-items: start
 }
 
 img {
@@ -33,12 +25,26 @@ img {
     border-radius: .5rem;
 }
 
-.movieTitle {
+.movieInfos {
+    display: flex;
+    align-items: flex-start;
+    justify-content: left;
+    gap: 1rem;
+
+}
+
+
+.containerInfo .movieTitle {
     color: var(--color-black);
     font-family: Poppins;
     font-size: 1.2rem;
     font-weight: 700;
+    justify-items: start
 }
+
+
+
+
 
 .movieInfos p {
     color: var(--color-black);
@@ -51,4 +57,9 @@ img {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+
+.movieCard .bookmarkIcon {
+    align-self: flex-start;
 }
