--- a/src/pages/detail/detail.css
+++ b/src/pages/detail/detail.css
@@ -1,57 +1,135 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-#detail{
+#detail {
     display: flex;
     flex-direction: column;
 }
 
-body{
+body {
     background-color: white;
     color: black;
     display: flex;
-    flex-direction: column;}
+    flex-direction: column;
+}
 
-#detailImgBox{
+#detailImgBox {
     display: flex;
     flex-direction: column;
-    height: 40vh;
-    justify-content: space-between;}
+    height: 60vh;
+    justify-content: space-between;
+}
 
-#backArrow{
+#backArrow {
     align-self: flex-start;
     justify-self: start;
-    background-color: white;}
+    background-color: white;
+    margin: 1rem;
+    border-radius: .5rem;
+    border: none;
+}
 
-#title{
+#title {
     display: flex;
-    flex-direction: column;}
+    flex-direction: column;
+    color: #000;
+    font-family: Poppins;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
 
-h1{
+h1 {
     text-align: center;
 }
 
-ul{
+ul {
     display: flex;
-    justify-content: space-evenly;}
+    justify-content: space-evenly;
+}
 
-#overview{
+#overview {
     display: flex;
     flex-direction: column;
-    text-align: start;}
+    text-align: start;
 
-#overview span{
-    color: red}
+}
+
+#overview p {
+    color: #000;
+    font-family: Poppins;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    padding: 1rem;
+}
+
+#overview p span {
+    color: red
+}
 
 
-.genre{
+.genre {
     display: flex;
-    justify-content: space-between;}
+    justify-content: space-between;
+    padding: .5rem 1em;
+}
 
-#trailerButton{
-    background-color: #FC2121;
+
+
+.genre p {
+    color: #000;
+
+    font-family: Poppins;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.genre :nth-child(1) {
+    color: #000;
+    font-family: Poppins;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+
+
+#trailerButton {
     align-self: center;
+    font-family: Poppins;
+    font-weight: 300;
+    font-size: 1.2rem;
+    background-color: var(--color-red);
+    color: white;
+    border: none;
+    border-radius: 1rem;
+    color: #FFF;
+
+
+}
+
+.genreButtons button {
+    font-family: Poppins;
+    font-weight: 300;
+    font-size: 1.2rem;
+    padding: .5rem 1rem;
+    border: none;
+    border-radius: 1rem;
+    background-color: #FBF8FF;
+    color: #A4A3A3;
+    cursor: pointer;
+}
+
+#trailerButton:hover {
+    background-color: #A4A3A3;
+    color: white
 }
