--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -1,12 +1,12 @@
 .navbar-nav {
-    font-size: 30px;
+    /* font-size: 30px;
     display: flex;
-    gap: 4rem;
-   
+    gap: 4rem; */
+    margin-right: auto;
+    width: 100%; 
+    display: flex;
+    justify-content: space-between;
+    font-size: 30px;
     
 }
 
-.nav-item {
-    display: flex;
-    align-items: center;
-}
