--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -6,12 +6,12 @@
 
 .movieTitle{
     color: white;
-    font-size: 1.5rem;
-    align-self: flex-start;
+    font-size: 1.7rem;
+    font-weight: 400;
 }
 
 .movieVoting{
-    align-self: flex-end;
+    /* align-self: flex-end; */
     font-weight: 300;
 }
 
@@ -24,7 +24,6 @@
 
 
 .darkShadow {
-    content: "";
     position: absolute;
     width: 100%;
     height: 100%;
@@ -45,6 +44,7 @@
 }
 
 nav {
+   
     margin-top: 8rem;
 }
 
@@ -52,4 +52,9 @@ nav {
     display: flex;
     justify-content: space-between;
     margin: 10px;
+    margin-top: 2rem;
+}
+
+.allMovies{
+    color: red;
 }
