--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,10 @@
    --color-black: rgba(0, 0, 0, 1);
  }
 
+ main {
+  margin-bottom: 4rem;
+}
+
  /* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
