--- a/src/components/introApp/introApp.css
+++ b/src/components/introApp/introApp.css
@@ -40,7 +40,9 @@
 
 .divIntroDescription {
     margin: 0 auto;
-    width: 30vw;
+    min-width: 320px;
+    width: 80vw;
+    max-width: 960px;
     display: flex;
     flex-direction: column;
     align-items: center;
