mobile css fertig

--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -3,17 +3,21 @@
     display: flex;
     gap: 4rem; */
     margin-right: auto;
-    width: 100%; 
+    width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     font-size: 30px;
-    
+
 }
 
 footer {
-    position:fixed;
+    position: fixed;
     bottom: 0;
     z-index: 1000;
-    height: 4rem;
+    height: 4.4rem;
     width: 100vw;
+}
+
+.nav-item .nav-link:hover {
+    color: red;
 }
