--- a/src/components/introApp/introApp.css
+++ b/src/components/introApp/introApp.css
@@ -17,7 +17,7 @@
 }
 
 .scEyeCatcher {
-    height: 65vh;
+    height: 55vh;
     background: radial-gradient(circle, #d92526, #d73835, #d34643, #cf5350, #ca5f5d, #c96b65, #c7766e, #c58178, #c68f83, #c79d8f, #c7ab9e, #c8b8af);
     width: 100%;
     position: relative;
@@ -36,6 +36,7 @@
     width: 100vw;
     position: relative;
     background: white;
+
 }
 
 .divIntroDescription {
@@ -48,6 +49,7 @@
     align-items: center;
     gap: 2rem;
     padding-top: 3rem;
+    padding-bottom: 3rem;
 }
 
 h2 {
@@ -55,8 +57,7 @@ h2 {
     text-align: center;
 }
 
-p {
-    font-size: 1.5rem;
+.divIntroDescription p {
+    /* font-size: 1.5rem; */
     text-align: center;
 }
-
