--- a/src/components/searchShowList/searchShowList.css
+++ b/src/components/searchShowList/searchShowList.css
@@ -39,11 +39,9 @@
     font-family: Poppins;
     font-size: 1.2rem;
     font-weight: 700;
-    justify-items: start
+    justify-items: start;
+    text-align: left;
 }
-
-
-
 
 
 .movieInfos p {
@@ -62,4 +60,14 @@
 
 .movieCard .bookmarkIcon {
     align-self: flex-start;
+}
+
+
+.bookmarkIcon:hover path {
+    stroke: red;
+    padding: 1rem;
+    transform: scale(.90);
+
+
+    /* Schimbă culoarea liniei la hover */
 }
