--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,27 +1,31 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-.movieTitle{
+.movieTitle {
     color: white;
     font-size: 1.7rem;
     font-weight: 400;
 }
 
-.movieVoting{
+.movieVoting {
     /* align-self: flex-end; */
     font-weight: 300;
 }
 
-.movieCategorys{
+.movieCategorys {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-   
+
 }
 
+.carouselContainer {
+    padding: .5rem 1rem;
+
+}
 
 .darkShadow {
     position: absolute;
@@ -29,27 +33,17 @@
     height: 100%;
     bottom: 0;
     left: 0;
-    background: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(0,0,0,0.7) 100%);
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.7) 100%);
     border-radius: 40px;
 }
 
-.carousel-item{
+.carousel-item {
     width: 100%;
-    
+
+
 }
 
 .carousel-item img {
-    border-radius: 40px;
-    height: 70vh;
-}
-
-.movieHeader{
-    display: flex;
-    justify-content: space-between;
-    margin: 10px;
-    margin-top: 2rem;
-}
-
-.allMovies{
-    color: red;
+    border-radius: 2rem;
+    /* height: 70vh; */
 }
