--- a/src/pages/trailer/trailer.css
+++ b/src/pages/trailer/trailer.css
@@ -1,22 +1,20 @@
 .headerTrailer {
-    height: 5rem;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: .5fr 4.5fr;
+    /* display: flex;
+    flex-direction: row; */
+    /* justify-content: space-between; */
+    padding: 1rem;
 }
 
 #trailerGoBack {
-    height: 52px;
-    align-self: flex-start;
-    background: white;
+    width: auto;
+    margin: 0 auto;
 }
 
-.headerTrailer h1 {
-    align-self: start;
-}
+
 
 .scTrailer div {
-
     display: flex;
     justify-content: center;
     align-items: center;
