--- a/src/index.css
+++ b/src/index.css
@@ -59,8 +59,8 @@
 
  @media screen and (min-width: 1024px) {
   main {
-    margin: 0 auto;
-    max-width: 1920px;
+    /* margin: 0 auto; */
+    max-width: 1920px; 
   }
  }
 
